--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -69,6 +69,36 @@
 
     
     "services_page_banner":"Servıces",
+    "services_page_side_menu_h1":"Software Services",
+    "services_page_side_menu_h2":"UAV Services",
+    "services_page_side_menu_h3":"Consultancy Services",
+    "services_page_side_menu_h4":"R&D Activities",
+    "services_page_side_menu_h5":"Sales and Marketing",
+    "services_page_side_menu_h6":"Technical Service",
+    "services_page_h1":"Software Services",
+    "services_page_p1_1":"Software can be defined as sequences of instructions used for electronic devices to fulfil specified tasks. With the developing technology, the software sector continues its progress in our country as well as all over the world. With the development of the software sector, it contributes to the growth of many sectors with the facilities it provides.",
+    "services_page_p1_2":"As Gökbey Technology, we prepare the most accurate and efficient software in line with customer requests in many different fields, especially in agriculture, with our expert software staff. We reach the best results together by sharing ideas with you at every stage of our software service.",
+    "services_page_p1_3":"As Gökbey Technology, we provide ease of use, efficiency increase and cost reduction in the related sector with the software we prepare.",
+    "services_page_p1_4":"We work with zero error policy in this field with our experience and knowledge in the sector. By standing behind every work we do, we offer our service to you after successfully performing all the tests required for the developed software.",
+    "services_page_h2":"UAV Services",
+    "services_page_p2_1":"With the developing technology, the use of Unmanned Aerial Vehicle (UAV) is increasing all over the world and in our country. On the other hand, unmanned aerial vehicles are used for different purposes in many areas such as defence, environment, transportation and agriculture.",
+    "services_page_p2_2":"Especially with unmanned aerial vehicles equipped with cameras and sensors used in agriculture, activities such as plant health analysis, soil analysis and agricultural spraying are performed. With the use of unmanned aerial vehicles in agriculture, agricultural productivity has increased and transition to modern agricultural methods has been achieved.",
+    "services_page_p2_3":"As Gökbey Technology, we supply various unmanned aerial vehicles used in many different fields of activity in agriculture in line with the needs of our customers. With its expert agricultural engineer staff and wide dealer network, we determine your needs correctly and provide services in line with your requirements",
+    "services_page_h3":"Consultancy Services",
+    "services_page_p3_1":"Consultancy, in general, is to organise certain business processes of a company at the point of cost reduction with an increase in productivity and profit.",
+    "services_page_p3_2":"With the developing technology, businesses want to use resources such as time and personnel at the optimum level, reduce costs related to their activities, provide better quality service to their customers and increase their competitiveness in the market. Many businesses make different technological investments in order to realise these wishes, but they cannot be successful. Because many businesses make mistakes in points such as where to start technological activities, investment amounts, personnel and business planning in order to be successful in their field.",
+    "services_page_p3_3":"As Gökbey Technology, we carry out consultancy activities for our customers in many investment items in the technological field with our expert consultancy staff. With consultancy activities, we aim to achieve the best results in line with the wishes of our customers.",
+    "services_page_h4":"R&D Activities",
+    "services_page_p4_1":"Many activities are carried out for economic development in our country, which is among the developing countries. R&D projects are one of these activities.",
+    "services_page_p4_2":"There are many technology centres (technoparks) in our country for R&D projects. The number of these technology centres is increasing day by day. With the support of technology centres and state institutions, companies carry out many different R&D project activities.",
+    "services_page_p4_3":"As Gökbey Technology, we continue our R&D activities in our office located in Gebze Technical University Technopark.",
+    "services_page_h5":"Sales and Marketing",
+    "services_page_p5_1":"With the globalising world economy, consumers have unlimited options and competitive market conditions, sales and marketing has become an important situation for companies. Because companies can continue their existence as long as they can sell the products and services they produce.",
+    "services_page_p5_2":"As Gökbey Technology, we plan our work in line with the requests of our customers with our expert staff in the field of sales and marketing as in every field. We realise our product sales to our customers with sales and marketing strategies suitable for global markets.",
+    "services_page_h6":"Technical Service",
+    "services_page_p6_1":"Technical service can be defined as providing timely and complete maintenance, reparation, repair and assembly operations of electronic devices that we use in all areas of our lives. Technical service is one of the most important services after the sale of the product.",
+    "services_page_p6_2":"As Gökbey Technology, we provide technical service for the products we sell with our talented engineers and technicians. We deliver our services to our customers as soon as possible. In addition, we provide online support in case of possible malfunctions by informing our customers about the after-sales support and maintenance times related to the products they have purchased.",
+    "services_page_p6_3":"After the technical service of the products is completed, we carry out the necessary tests before sending them to the customer and ensure that they are shipped safely.",
 
     "contact_page_banner":"Contact",
     "contact_page_header":"Contact",
