--- a/public/assets/locales/tr/translation.json
+++ b/public/assets/locales/tr/translation.json
@@ -68,6 +68,36 @@
     "about_page_p2":"Pazardaki müşteri taleplerini ve sektördeki yenilikleri yakından takip eden, teknoloji ile birlikte değişen dünya koşullarına uyum sağlayabilen şirketimiz genç, alanında uzman ve  güçlü idari ve teknik kadrosu ile birçok ARGE projesine imza atarak sektörde gelişmeyi ve büyümeyi hedeflemektedir.",
 
     "services_page_banner":"Hizmetlerimiz",
+    "services_page_side_menu_h1":"Yazılım Hizmetleri",
+    "services_page_side_menu_h2":"İHA Hizmetleri",
+    "services_page_side_menu_h3":"Danışmanlık Hizmetleri",
+    "services_page_side_menu_h4":"ARGE Faaliyetleri",
+    "services_page_side_menu_h5":"Satış ve Pazarlama",
+    "services_page_side_menu_h6":"Teknik Servis",
+    "services_page_h1":"Yazılım Hizmetleri",
+    "services_page_p1_1":"Yazılım elektronik aygıtların belirlenen görevleri yerine getirmesi için kullanılan talimat dizileri olarak tanımlanabilir. Gelişen teknoloji ile birlikte yazılım sektörü tüm dünyada olduğu gibi ülkemizde de ilerlemesini sürdürmektedir. Yazılım sektörünün gelişimi ile beraber sağladığı kolaylıklarla birçok sektöründe büyümesine katkı sağlamaktadır.",
+    "services_page_p1_2":"Gökbey Teknoloji olarak uzman yazılım kadromuzla beraber başta tarım olmak üzere birçok farklı alanda müşteri istekleri doğrultusunda en doğru ve verimli yazılımı hazırlıyoruz. Yazılım hizmetimizin her aşamasında sizlerle fikir alışverişinde bulunarak en iyi sonuçlara beraber ulaşıyoruz.",
+    "services_page_p1_3":"Gökbey Teknoloji olarak hazırladığımız yazılımlar ile ilgili sektörde kullanım kolaylığı, verim artırımı ve maliyet azalımı sağlıyoruz.",
+    "services_page_p1_4":"Sektördeki tecrübemiz ve bilgilimiz ile bu alanda sıfır hata politikası ile çalışıyoruz. Her yaptığımız işin arkasında durarak, geliştirilen yazılım için gerekli olan tüm testleri başarılı bir şekilde gerçekleştirdikten sonra hizmetimizi sizlere sunuyoruz.",
+    "services_page_h2":"İHA Hizmetleri",
+    "services_page_p2_1":"Gelişen teknoloji ile birlikte İnsansız Hava Aracı (İHA) kullanımı tüm dünya da ve ülkemizde artış göstermektedir. Bununla beraber insansız hava araçları günümüzde savunma, çevre, taşımacılık ve tarım gibi birçok alanda farklı amaçlar için kullanılmaktadır.",
+    "services_page_p2_2":"Özellikle tarımda kullanılan kamera ve sensörler ile donatılmış İnsansız hava araçları ile bitki sağlığı analizi, toprak analizi ve tarımsal ilaçlama gibi faaliyetler gerçekleştirilmektedir. İnsansız hava araçlarının tarımda kullanımı ile beraber tarımsal verimlilik artmış ve modern tarım yöntemlerine geçiş sağlanabilmiştir.",
+    "services_page_p2_3":"Gökbey Teknoloji olarak tarımda birçok farklı faaliyet alanında kullanılan çeşitli insansız hava araçlarını siz müşterilerimizin ihtiyacı doğrultusunda temin etmekteyiz. Uzman ziraat mühendisi kadrosu ve geniş bayi ağı ile sizlerin ihtiyaçlarınızı doğru olarak belirleyip, ihtiyaçlarının doğrultusunda hizmet sağlamaktayız.",
+    "services_page_h3":"Danışmanlık Hizmetleri",
+    "services_page_p3_1":"Danışmanlık, genel olarak bir firmanın belirli iş süreçlerini, verimlilik ve kar artışıyla beraber maliyet azaltma noktasında düzenlemektir.",
+    "services_page_p3_2":"Gelişen teknoloji ile beraber işletmeler zaman ve personel gibi kaynakları optimum seviyede kullanmak, faaliyetleriyle alakalı maliyetlerin düşürmek, müşterilerine daha kaliteli hizmet sunmak ve pazardaki rekabet gücünü artırmak istemektedirler. Birçok işletme bu isteklerini gerçekleştirmek için farklı teknolojik yatırımlar yapmakta fakat başarılı olamamaktadır. Çünkü birçok işletme alanında başarılı olabilmek için teknolojik faaliyetlere nereden başlanılacağı, yatırım miktarları, personel ve iş planlamaları gibi noktalarda hataya düşmektedirler.",
+    "services_page_p3_3":"Gökbey Teknoloji olarak uzman danışmanlık kadromuz ile teknolojik alanda birçok yatırım kaleminde müşterilerimize danışmanlık faaliyetlerimizi gerçekleştirmekteyiz. Danışmanlık faaliyetleri ile müşterilerimizin istekleri doğrultusunda en iyi sonucu elde etmelerini hedeflemekteyiz.",
+    "services_page_h4":"ARGE Faaliyetleri",
+    "services_page_p4_1":"Gelişmekte olan ülkeler arasında yerini alan ülkemiz de ekonomik kalkınma için birçok faaliyet yürütülmektedir. ARGE projeleri de bu faaliyetlerden bir tanesidir.",
+    "services_page_p4_2":"ARGE projeleri için ülkemizde çok sayıda teknoloji merkezleri (teknoparklar) bulunmaktadır. Bu teknoloji merkezlerinin sayıları ise her geçen gün artmaktadır. Teknoloji merkezlerinin ve devlet kurumlarının da destekleriyle şirketler birçok farklı ARGE projesi faaliyeti yürütmektedir.",
+    "services_page_p4_3":"Gökbey Teknoloji olarak Gebze Teknik Üniversitesi Teknoparkında bulunan ofisimizde ARGE faaliyetlerimizi sürdürmekteyiz.",
+    "services_page_h5":"Satış ve Pazarlama",
+    "services_page_p5_1":"Küreselleşen dünya ekonomisi ile tüketicinin sınırsız seçenekleri sahip olması ve rekabetçi piyasa koşullarıyla satış ve pazarlama firmalar için önemli bir durum haline gelmiştir. Çünkü firmalar ürettikleri ürünleri ve hizmetleri satabildikleri sürece varlıklarını devam ettirebilmektedirler.",
+    "services_page_p5_2":"Gökbey teknoloji olarak her alanda olduğu gibi satış ve pazarlama alanında da uzman kadromuzla müşterilerimiz istekleri doğrultusunda çalışmalarımızı planlıyoruz. Küresel piyasalara uygun satış ve pazarlama stratejileri ile müşterilerimize ürün satışlarımızı gerçekleştiriyoruz.",
+    "services_page_h6":"Teknik Servis",
+    "services_page_p6_1":"Teknik servis hayatımızın her alanında kullanmış olduğumuz elektronik cihazların bakım, onarım, tamirat ve montaj işlemlerinin zamanında ve eksiksiz olarak sağlanması olarak tanımlanabilir. Teknik servis hizmetleri ürünün satışından sonraki en büyük öneme sahip hizmetlerdendir.",
+    "services_page_p6_2":"Gökbey Teknoloji olarak satışını gerçekleştirdiğimiz ürünlerin, yetenekli mühendis ve tekniker kadrosu ile teknik servis hizmetini gerçekleştirmekteyiz. Hizmetlerimizi en kısa sürede gerçekleştirilerek, müşterilerimize teslim ediyoruz. Ayrıca müşterilerimize aldıkları ürünler ile alakalı satış sonrası destek ile bakım zamanlarını bildirerek, olası arıza durumlarında  online destek sağlıyoruz.",
+    "services_page_p6_3":"Ürünlerin teknik servis hizmetleri tamamlandıktan sonra, müşteriye göndermeden önce gerekli testleri gerçekleştirerek sağlam bir şekilde gönderim sağlıyoruz.",
 
     "contact_page_banner":"İletişim",
     "contact_page_header":"İletişim",
