--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -66,6 +66,10 @@
     "about_page_header":"About Us",
     "about_page_p1":"Established in 2022 in Gebze Technical University Technopark in order to develop important R&D projects in the engineering and software sector, to bring new technologies to our country and to contribute to the engineering sector to reach the level of developed countries by closely following the latest technological innovations, Gökbey Technology has adopted the principle of steady growth with its professionalism and visionary perspective since its establishment.",
     "about_page_p2":"Our company, which closely follows the customer demands in the market and innovations in the sector and can adapt to the changing world conditions with technology, aims to develop and grow in the sector by signing many R&D projects with its young, expert and strong administrative and technical staff.",
+    "about_page_accordion_title_1": "OUR VISION",
+    "about_page_accordion_content_1": "To be one of the leading companies in Turkey in the field of production and export by providing fast and reliable solutions in the field of engineering.",
+    "about_page_accordion_title_2": "OUR MISSION",
+    "about_page_accordion_content_2": "To ensure digitalisation in many different sectors with the developing technology, taking into account the needs of the country.",
 
     
     "services_page_banner":"Servıces",
