--- a/public/assets/locales/tr/translation.json
+++ b/public/assets/locales/tr/translation.json
@@ -66,6 +66,10 @@
     "about_page_header":"Hakkımızda",
     "about_page_p1":"2022 yılında mühendislik ve yazılım sektöründe önemli ARGE projelerinin geliştirilmesi, ülkemize yeni teknolojilerin getirilmesi ve son teknolojik yenilikleri yakından takip ederek mühendislik sektörünün gelişmiş ülkeler seviyesine ulaşmasında katkı sunmak amacıyla Gebze Teknik Üniversitesi Teknoparkta kurulmuş olan Gökbey Teknoloji, kuruluşundan beri sürdürdüğü profesyonellik ve vizyoner bakış açısı ile istikrarlı büyümeyi ilke edinmiştir.",
     "about_page_p2":"Pazardaki müşteri taleplerini ve sektördeki yenilikleri yakından takip eden, teknoloji ile birlikte değişen dünya koşullarına uyum sağlayabilen şirketimiz genç, alanında uzman ve  güçlü idari ve teknik kadrosu ile birçok ARGE projesine imza atarak sektörde gelişmeyi ve büyümeyi hedeflemektedir.",
+    "about_page_accordion_title_1": "VİZYONUMUZ",
+    "about_page_accordion_content_1": "Mühendislik alanında hızlı ve güvenilir çözümler sağlayarak, üretim ve ihracat alanında Türkiye’nin önde gelen firmalarından olmak.",
+    "about_page_accordion_title_2": "MİSYONUMUZ",
+    "about_page_accordion_content_2": "Ülke ihtiyacı göz önünde bulundurularak, gelişen teknolojiyle beraber birçok farklı sektörde dijitalleşmeyi sağlamak.",
 
     "services_page_banner":"Hizmetlerimiz",
     "services_page_side_menu_h1":"Yazılım Hizmetleri",
